# personal_assistent

./: .gitignore  README.md  docker-compose.yaml  plan.md  pyproject.toml
app/: config.py
app/agent/: parser.py  prompt.py  schema.py
app/db/: models.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 7ea33902702b_create_users_notifications_calendar_.py
