[project]
name = "assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.29.0",
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "langchain>=1.3.9",
    "langchain-openai>=1.3.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
]
